调整某些图片

--- a/1/A/preface.tex
+++ b/1/A/preface.tex
@@ -103,32 +103,32 @@
 个特点．图像的突出优点是它很直观，而且比较容易直接根
 据实验数据画出来．
 
-\begin{figure}[htp]\centering 
-\begin{subfigure}{0.46\linewidth}
-	\centering
-	\begin{tikzpicture}[>=stealth, thick]
-		\draw [<->](0,3)--(0,0)--(4,0);
-		\node at (.5,3) {温度};
-		\node at (3.75,-.25) {时间};
-		\draw (.5,.5)--(1.5,1.5)--(2.5,1.5)--(3.5,2.5);
-		%\node at (2,-.75) {甲：晶体};
-	\end{tikzpicture}
-	\caption{晶体}\label{fig_A_0-1a}
-\end{subfigure}
-\hfil
-\begin{subfigure}{0.46\linewidth}
-	\centering
-	\begin{tikzpicture}[>=stealth, thick]
-		\draw [<->](0,3)--(0,0)--(4,0);
-		\node at (.5,3) {温度};
-		\node at (3.75,-.25) {时间};
-		\draw (.5,.5) [bend left =15] to (3.5,2.5);
-		%\node at (2,-.75) {乙：非晶体};
-	\end{tikzpicture}
-	\caption{非晶体}\label{fig_A_0-1b}
-\end{subfigure}
-\caption{物体受热时温度随时间而变化的图线
-}\label{fig_A_0-1}
+\begin{figure}[htbp]
+    \centering 
+    \begin{subfigure}{0.46\linewidth}
+        \centering
+        \begin{tikzpicture}[>=stealth, thick]
+            \draw [<->](0,3)--(0,0)--(4,0);
+            \node at (.5,3) {温度};
+            \node at (3.75,-.25) {时间};
+            \draw (.5,.5)--(1.5,1.5)--(2.5,1.5)--(3.5,2.5);
+            %\node at (2,-.75) {甲：晶体};
+        \end{tikzpicture}
+        \caption{晶体}\label{fig_A_0-1a}
+    \end{subfigure}
+    \hfil
+    \begin{subfigure}{0.46\linewidth}
+        \centering
+        \begin{tikzpicture}[>=stealth, thick]
+            \draw [<->](0,3)--(0,0)--(4,0);
+            \node at (.5,3) {温度};
+            \node at (3.75,-.25) {时间};
+            \draw (.5,.5) [bend left =15] to (3.5,2.5);
+            %\node at (2,-.75) {乙：非晶体};
+        \end{tikzpicture}
+        \caption{非晶体}\label{fig_A_0-1b}
+    \end{subfigure}
+    \caption{物体受热时温度随时间而变化的图线}\label{fig_A_0-1}
 \end{figure}
 
     数学知识在物理学中的应用是十分重要的，但是我们却
