--- a/1/A/03.tex
+++ b/1/A/03.tex
@@ -30,9 +30,19 @@
 我们可以用现代的实验设备来近似地验证上述结论．把
 物体放在一个水平导轨上，并设法使物体和导轨之间形成气层，物体沿这种气垫导轨运动时摩擦很小．推动一下物体，可以看到物体沿气垫导轨的运动很接近匀速直线运动．
 
-\begin{figure}[htp]
-    \centering
-    \begin{subfigure} {1\linewidth} 
+
+
+伽利略还根据下面的理想实验进行推论．如图~\ref{fig_A_3-1a} 所示，
+让小球沿一个斜面从静止滚下来，小球将滚上另一个斜面．
+如果没有摩擦，小球将上升到原来的高度．他推论说，
+如果减小第二个斜面的倾角（图~\ref{fig_A_3-1b}），小球在这个斜面上达
+到原来的高度就要通过更长的距离．
+继续减小第二个斜面的倾角，
+使它最终成为水平面（图~\ref{fig_A_3-1c}），小球就再也达不到原来的高度，
+而要沿着水平面以恒定速度持续运动下去．
+\begin{figure}[htbp]
+	\centering
+	\begin{subfigure} {1\linewidth} 
 		\centering
 		\includegraphics{fig/A/3-1a.pdf} 
 		\caption{}\label{fig_A_3-1a} 
@@ -49,17 +59,9 @@
 		\includegraphics{fig/A/3-1c.pdf} 
 		\caption{}\label{fig_A_3-1c} 
 	\end{subfigure}
-    \caption{伽利略的斜面实验}\label{fig_A_3-1}
+	\caption{伽利略的斜面实验}\label{fig_A_3-1}
 \end{figure}
 
-伽利略还根据下面的理想实验进行推论．如图~\ref{fig_A_3-1a} 所示，
-让小球沿一个斜面从静止滚下来，小球将滚上另一个斜面．
-如果没有摩擦，小球将上升到原来的高度．他推论说，
-如果减小第二个斜面的倾角（图~\ref{fig_A_3-1b}），小球在这个斜面上达
-到原来的高度就要通过更长的距离．
-继续减小第二个斜面的倾角，
-使它最终成为水平面（图~\ref{fig_A_3-1c}），小球就再也达不到原来的高度，
-而要沿着水平面以恒定速度持续运动下去．
 
 伽利略的实验虽然是想象中的理想实验，但它们是建立在可靠的事实的基础之上的．伽利略把经验事实和抽象思维结合起来，这正是他的工作的卓越之处．由于伽利略细心地研究了理想实验，才使他对动力学做出了重大贡献．
 这类理想实验在真实的实验基础上，抓住主要因素，忽略次要因素，可以深入地揭示现象的本质，它是科学研究中的一种重要方法．
@@ -119,10 +121,10 @@
 
 \subsection*{练习一}
 \begin{enumerate}
-	 \item 一个球以$20 \Ucms$的速度运动着，而且没有受到力的作用，5秒后它的速度将是多大？
-	 \item 在行驶的火车里的水平桌面上放着一个小球，当小球突然相对于车厢发生向前运动或者向后运动时，火车的运动状态分别发生了怎样的改变？
-	 \item 地球从西向东转，为什么我们向上跳起来以后还落到原地，而不落到原地的西边？
-	 \item 分别举出几个利用惯性和防止惯性的不利影响的例子．
+     \item 一个球以$20 \Ucms$的速度运动着，而且没有受到力的作用，5秒后它的速度将是多大？
+     \item 在行驶的火车里的水平桌面上放着一个小球，当小球突然相对于车厢发生向前运动或者向后运动时，火车的运动状态分别发生了怎样的改变？
+     \item 地球从西向东转，为什么我们向上跳起来以后还落到原地，而不落到原地的西边？
+     \item 分别举出几个利用惯性和防止惯性的不利影响的例子．
 \end{enumerate}
 
 \section{物体运动状态的改变}
@@ -138,7 +140,7 @@
 一辆空车和一辆装满货物的车，在相同牵引力的作用下，空车用较短的时间可以达到某一速度，装满货物的车要较长的时间才能达到相同的速度．空车的质量小，产生的加速度大；装满货物的车质量大，产生的加速度小．这说明，质量不同的物体，它们的运动状态的改变的难易程度并不相同，或者说它们的惯性的大小并不相同．在外力相同的情况下，质量大的物体得到的加速度小，它的运动状态难改变，惯性大；质量小的物体得到的加速度大，它的运动状态容易改变，惯性小．
 这样，我们看到质量在动力学中所起的作用，质量越大，物体的惯性就越大．\NoteUnderWave{质量是物体惯性大小的量度}．
 
-\begin{figure}[htp]
+\begin{figure}[htbp]
     \centering
     \includegraphics{fig/A/3-2.pdf}
     \caption{歼击机在战斗前抛掉副油箱}\label{fig_A_3-2}
@@ -159,7 +161,7 @@
 当砂和砂桶的总质量远小于小车的总质量时，小车所受的拉力可以认为等于砂和砂桶的总
 重量．因此，用天平称出砂和砂桶的总质量，算出它们的总重量，就得到小车所受的拉力．小车的后面固定一条穿过打点计时器的纸带，随着小车的运动，打点计时器在纸带上打下一列小点，把小车的运动情况记录下来．
 
-\begin{figure}[htp]
+\begin{figure}[htbp]
     \centering
     \includegraphics{fig/A/3-3.pdf}
     \caption{研究牛顿第二定律的实验装置}\label{fig_A_3-3}
@@ -179,31 +181,31 @@
 
 
 \begin{table}[htbp]
-	\centering
-	\begin{minipage}[b]{0.45\linewidth}
-		\centering
-		\begin{tblr}{cc}
-			\toprule
-			$F$  & $a$ \\
-			（$\UkgfA$）&（$\UmsqA$）\\
-			\midrule
-			0.020  &  0.193  \\
-			0.040  &  0.392  \\
-			0.060  &  0.588  \\
-			0.080  &  0.775  \\
-			0.100  &  0.955  \\
-			\bottomrule
-		\end{tblr}
-		\caption{其中 $\UkgfA$ 
-			%（kilogram-force）
-			表示千克力}\label{tab_A_3-1}
-	\end{minipage}
-	\hfil
-	\begin{minipage}[b]{0.45\linewidth}
-		\centering
-		\includegraphics{fig/A/3-4.pdf}
-		\captionof{figure}{$a-F$图像}\label{fig_A_3-4}
-	\end{minipage}
+    \centering
+    \begin{minipage}[b]{0.45\linewidth}
+        \centering
+        \begin{tblr}{cc}
+            \toprule
+            $F$  & $a$ \\
+            （$\UkgfA$）&（$\UmsqA$）\\
+            \midrule
+            0.020  &  0.193  \\
+            0.040  &  0.392  \\
+            0.060  &  0.588  \\
+            0.080  &  0.775  \\
+            0.100  &  0.955  \\
+            \bottomrule
+        \end{tblr}
+        \caption{其中 $\UkgfA$ 
+            %（kilogram-force）
+            表示千克力}\label{tab_A_3-1}
+    \end{minipage}
+    \hfil
+    \begin{minipage}[b]{0.45\linewidth}
+        \centering
+        \includegraphics{fig/A/3-4.pdf}
+        \captionof{figure}{$a-F$图像}\label{fig_A_3-4}
+    \end{minipage}
 \end{table}
 
 
@@ -231,9 +233,9 @@
 
 \subsection*{练习二}
 \begin{enumerate}
-	\item 根据你的记录纸带，量出有关数值，计算出每次实验的加速度，列出表格，作出$a-F$图像．
-	\item 利用你自己的数据算出每次实验中$a$和$F$的比值，看看这些比值是否大致相同？利用这种办法来研究$a$和$F$的关系，比起用图像来研究，哪种办法方便？
-	\item 5牛的力作用在一个物体上，能使它产生2$\Umsq$的加速度，要使它产生5$\Umsq$的加速度，需要多少牛的力？
+    \item 根据你的记录纸带，量出有关数值，计算出每次实验的加速度，列出表格，作出$a-F$图像．
+    \item 利用你自己的数据算出每次实验中$a$和$F$的比值，看看这些比值是否大致相同？利用这种办法来研究$a$和$F$的关系，比起用图像来研究，哪种办法方便？
+    \item 5牛的力作用在一个物体上，能使它产生2$\Umsq$的加速度，要使它产生5$\Umsq$的加速度，需要多少牛的力？
 \end{enumerate}
 
 
@@ -247,15 +249,6 @@
 改变运动物体的质量，再做几次实验
 把各次实验中测得的加速度和质量的数据列表记录下来．
 表~\ref{tab_A_3-2} 是我们在实验中测得的数据，作为例子写在这里．
-
-用图像来处理上面的数据．取横坐标表示质量$m$,纵坐
-标表示加速度$a$，根据实验数据作出图像．我们看到，画出的图像是一条曲线（图~\ref{fig_A_3-5}）．
-我们很难从这个图像得到$a$和$m$是什么定量关系．
-想想看，怎样才能找出这个定量关系？能不能设法让所画的图像是一条直线呢？
-从$a-m$图像可以看出其中一个量增加，另一个量减小，于是猜想$a$和$m$可能是反比关系．
-现在改变一下作图方法，取横坐标表示$1/m$，纵坐标表示$a$，看看图像是怎样的．为此需要算出$1/m$的数值．
-表~\ref{tab_A_3-3} 是 $1/m$ 和相应的$a$的数据．
-
 \begin{table}[htbp]
 	\centering
 	\begin{minipage}[b]{0.45\linewidth}
@@ -284,19 +277,13 @@
 
 
 
-
-实验结果表明，得到的图像正是一条通过原点的直线（图~\ref{fig_A_3-6}）,这表明我们的猜想是正确的，课后同学们可以根据自己
-实验的数据，作出$a-1/m$图像．你得到的图像是一条直线吗？
-
-
-我们从实验中得到的结论是：\NoteUnderWave{在相同外力作用下，加速度跟质量成反比}．写成公式就是
-\[\frac{a_1}{a_2}=\frac{m_2}{m_1} \]
-或者
-\[a\propto \frac{1}{m} \]
-对于一个确定的力来说，如果我们知道这个力作用在已知质量的物体上产出多大加速度，根据加速度和质量成反比，我们就可以知道这个力对任何质量的物体产生多大加速度．比如一个力作用在1千克的物体上产生10$\Umsq$的加速度，那么，这个力作用在2千克的物体上就产生5$\Umsq$的加速度，作用在5千克的物体上就产生2$\Umsq$的加速度等等．
-
-
-
+用图像来处理上面的数据．取横坐标表示质量$m$,纵坐
+标表示加速度$a$，根据实验数据作出图像．我们看到，画出的图像是一条曲线（图~\ref{fig_A_3-5}）．
+我们很难从这个图像得到$a$和$m$是什么定量关系．
+想想看，怎样才能找出这个定量关系？能不能设法让所画的图像是一条直线呢？
+从$a-m$图像可以看出其中一个量增加，另一个量减小，于是猜想$a$和$m$可能是反比关系．
+现在改变一下作图方法，取横坐标表示$1/m$，纵坐标表示$a$，看看图像是怎样的．为此需要算出$1/m$的数值．
+表~\ref{tab_A_3-3} 是 $1/m$ 和相应的$a$的数据．
 
 \begin{table}[htbp]
 	\centering
@@ -327,10 +314,23 @@
 
 
 
+实验结果表明，得到的图像正是一条通过原点的直线（图~\ref{fig_A_3-6}）,这表明我们的猜想是正确的，课后同学们可以根据自己
+实验的数据，作出$a-1/m$图像．你得到的图像是一条直线吗？
+
+
+我们从实验中得到的结论是：\NoteUnderWave{在相同外力作用下，加速度跟质量成反比}．写成公式就是
+\[\frac{a_1}{a_2}=\frac{m_2}{m_1} \]
+或者
+\[a\propto \frac{1}{m} \]
+对于一个确定的力来说，如果我们知道这个力作用在已知质量的物体上产出多大加速度，根据加速度和质量成反比，我们就可以知道这个力对任何质量的物体产生多大加速度．比如一个力作用在1千克的物体上产生10$\Umsq$的加速度，那么，这个力作用在2千克的物体上就产生5$\Umsq$的加速度，作用在5千克的物体上就产生2$\Umsq$的加速度等等．
+
+
+
+
 
 \subsection*{练习三}
 \begin{enumerate}
-	\item 根据你的记录纸带，量出有关数值，计算出每次实验的加速度，列出表格，作出$a-1/m$图像．
+    \item 根据你的记录纸带，量出有关数值，计算出每次实验的加速度，列出表格，作出$a-1/m$图像．
 \item 利用你自己的数据算出每次实验中$m$和$a$的乘积，
 看看乘积的数值是否大致相同？你由此能得出什么结论？利用这种办法来研究$a$和$m$的关系，比起用图像来研究，哪种办法方便？
 \item 你已经用图像研究了$a$和$F$、$a$和$m$的关系，谈谈用图像处理实验数据的好处．
@@ -363,7 +363,7 @@
 
 \subsection{力的独立作用原理}
 上面讲的是物体受到一个力作用的情况，物体受到几个力的作用时，情况又是怎样的呢？当物体受到几个力的作用时，每个力各自独立地使物体产生一个加速度，就像其他的力不存在一样，这个性质叫做\NoteBold{力的独立作用原理}．因此物体受到几个力的作用，就产生几个加速度，物体实际的加速度就是这几个加速度的矢量和．
-\begin{figure}[htp]
+\begin{figure}[htbp]
     \centering
     \includegraphics{fig/A/3-7.pdf}
     \caption{}\label{fig_A_3-7}
@@ -387,7 +387,7 @@
 
 \subsection*{练习四}
 \begin{enumerate}
-	\item 从牛顿第二定律知道，无论怎样小的力都可以使物体产生加速度，可是我们用力提一个很重的物体时，却提不动它．这跟牛顿第二定律有无矛盾，为什么？
+    \item 从牛顿第二定律知道，无论怎样小的力都可以使物体产生加速度，可是我们用力提一个很重的物体时，却提不动它．这跟牛顿第二定律有无矛盾，为什么？
 \item 要把一个箱子在地板上从这一端推到另一端，我们在全部时间内都必须用力推它，停止用力，箱子就会停下来．马必须用力拉车，车子才前进，停止用力，车子就会停下来．亚里士多德怎样解释上述现象？根据牛顿运动定律应该怎样解释？
 \item 一个物体受到一个逐渐减小的力的作用，力的方向跟速度的方向相同，物体的速度怎样改变？
 \item \begin{enumerate}
@@ -443,15 +443,6 @@
 知道，地球上不同的地方，重力加速度$g$是不同的．
 表~\ref{tab_A_3-4} 是一些地点的重力加速度的数值，至于各地的$g$值不同的原因，
 将在第\ref{chapter-law-of-universal-gravitation}章加以说明．
-
-应该说明的是，同一物体在地球上不同的地方重量虽然
-不同，但相差是很小的，最多只有千分之几．
-例如国际标准千克，在北极的重量是9.83216牛，在赤道的重量是9.780304牛．
-因此，在一般情况下可以不考虑这个差别，而认为质量是1千
-克的物体在地球上任何地方的重量都是9.8牛．这跟在一般
-情况下可以不考虑重力加速度$g$在地球上不同地方的差别，
-而总是取$g=9.8\Umsq$是一样的．
-
 \begin{table}[htbp]
 	\centering
 	\caption{重力加速度的数值（$\UmsqA$），标准值：$g=9.80665\Umsq$}\label{tab_A_3-4}
@@ -471,6 +462,17 @@
 		\hline
 	\end{tblr}
 \end{table}
+
+
+应该说明的是，同一物体在地球上不同的地方重量虽然
+不同，但相差是很小的，最多只有千分之几．
+例如国际标准千克，在北极的重量是9.83216牛，在赤道的重量是9.780304牛．
+因此，在一般情况下可以不考虑这个差别，而认为质量是1千
+克的物体在地球上任何地方的重量都是9.8牛．这跟在一般
+情况下可以不考虑重力加速度$g$在地球上不同地方的差别，
+而总是取$g=9.8\Umsq$是一样的．
+
+
 
 在地球上同一个地方，各个物体的重力加速度是相同的．
 设在地球上某个地方有两个物体，它们的重量分别是$G_1$和$G_2$，
@@ -599,7 +601,7 @@ v_t&=at=2.0\Umsq \times 5.0\Us=10\Ums
 2.2牛．求物体4.0秒末的速度和4.0秒内发生的位移．
 \end{example}
 
-\begin{figure}[htp]
+\begin{figure}[htbp]
     \centering
     \includegraphics{fig/A/3-8.pdf}
     \caption{}\label{fig_A_3-8}
@@ -639,7 +641,7 @@ s&=\frac{1}{2}at^2=\frac{1}{2}\times 1.1\times (4.0)^2 \Um=8.8\Um
 秒内滑下的路程．
 \end{example}
 
-\begin{figure}[htp]
+\begin{figure}[htbp]
     \centering
     \includegraphics{fig/A/3-9.pdf}
     \caption{}\label{fig_A_3-9}
@@ -744,13 +746,14 @@ $F$为正值表示牵引力方向和所取正方向即列车前进的方
 汽车做匀变速运动时，悬线将不在竖直方向，而与竖直方向成
 某一固定角度（图~\ref{fig_A_3-10}）．已知小球的质量是30克，汽车的
 加速度为5.0$\Umsq$，求悬线对小球的拉力．
+\begin{figure}[htbp]
+	\centering
+	\includegraphics{fig/A/3-10.pdf}
+	\caption{}\label{fig_A_3-10}
+\end{figure}
 \end{example}
 
-\begin{figure}[htp]
-    \centering
-    \includegraphics{fig/A/3-10.pdf}
-    \caption{}\label{fig_A_3-10}
-\end{figure}
+
 
 \begin{solution}
     在解这个问题时，我们以小球为研究对象，它的运动情况
@@ -770,7 +773,7 @@ T&=m\sqrt{a^2+g^2}\\
 \end{split} \]
 \end{solution}
 
-\begin{figure}[htp]
+\begin{figure}[htbp]
     \centering
     \includegraphics{fig/A/3-11.pdf}
     \caption{}\label{fig_A_3-11}
@@ -822,16 +825,9 @@ T&=m\sqrt{a^2+g^2}\\
 弹簧秤的下面，当物体和弹簧秤静止时弹簧秤的读数就等于
 物体的重量（图~\ref{fig_A_3-12a}）．那么，当弹簧秤和物体一起在竖直
 方向做加速运动时，弹簧秤的读数还等于物体的重量吗？
-
-    用手提着挂有物体的弹簧秤，使它急剧上升（图~\ref{fig_A_3-12b}），
-产生方向向上的加速度．我们看到，这时弹簧秤的读数大于
-物体的重量．相反地，如果使它急剧下降（图~\ref{fig_A_3-12c}），产生
-方向向下的加速度，弹簧秤的读数就小于物体的重量．怎样
-解释这种现象呢？把牛顿第二定律和牛顿第三定律结合起
-来，就能解释这种现象了．
-\begin{figure}[htp]
-    \centering
-    \begin{subfigure} {0.3\linewidth} 
+\begin{figure}[htbp]
+	\centering
+	\begin{subfigure} {0.3\linewidth} 
 		\centering
 		\includegraphics{fig/A/3-12a.pdf} 
 		\caption{}\label{fig_A_3-12a} 
@@ -848,26 +844,36 @@ T&=m\sqrt{a^2+g^2}\\
 		\includegraphics{fig/A/3-12c.pdf} 
 		\caption{}\label{fig_A_3-12c} 
 	\end{subfigure}
-    \caption{}\label{fig_A_3-12}
+	\caption{}\label{fig_A_3-12}
 \end{figure}
+
+
+
+    用手提着挂有物体的弹簧秤，使它急剧上升（图~\ref{fig_A_3-12b}），
+产生方向向上的加速度．我们看到，这时弹簧秤的读数大于
+物体的重量．相反地，如果使它急剧下降（图~\ref{fig_A_3-12c}），产生
+方向向下的加速度，弹簧秤的读数就小于物体的重量．怎样
+解释这种现象呢？把牛顿第二定律和牛顿第三定律结合起
+来，就能解释这种现象了．
+
 
     以挂在弹簧秤上的物体作为研究对象，它受到两个力的
 作用：重力$G$和弹簧的拉力$T$（图~\ref{fig_A_3-13}）．根据牛顿第二定
 律知道，正是这两个力的合力使物体做加速运动的．
 
-\begin{figure}[htp]
+\begin{figure}[htbp]
     \centering
     \begin{subfigure} {0.3\linewidth} 
-		\centering
-		\includegraphics{fig/A/3-13a.pdf} 
-		\caption{}\label{fig_A_3-13a} 
-	\end{subfigure}
-	\hfil
-	\begin{subfigure} {0.3\linewidth} 
-		\centering
-		\includegraphics{fig/A/3-13b.pdf} 
-		\caption{}\label{fig_A_3-13b} 
-	\end{subfigure}
+        \centering
+        \includegraphics{fig/A/3-13a.pdf} 
+        \caption{}\label{fig_A_3-13a} 
+    \end{subfigure}
+    \hfil
+    \begin{subfigure} {0.3\linewidth} 
+        \centering
+        \includegraphics{fig/A/3-13b.pdf} 
+        \caption{}\label{fig_A_3-13b} 
+    \end{subfigure}
     \caption{}\label{fig_A_3-13}
 \end{figure}
 
@@ -896,11 +902,6 @@ $G-ma$，这时表示物体对弹簧秤拉力的弹簧秤读数小于物体
 下的加速度时，它对支持物的压力（或对悬挂物的拉力）小于
 物体的重量的现象，叫做\NoteBold{失重现象}．
 
-\begin{figure}[htp]
-    \centering
-    \includegraphics{fig/A/3-14.pdf}
-    \caption{}\label{fig_A_3-14}
-\end{figure}
 
     如果把挂着物体的弹簧秤从手中放开（图~\ref{fig_A_3-14}），物体和
 弹簧秤将一起自由下落，这时$T=G-mg=0$，弹簧秤的读数
@@ -913,6 +914,12 @@ $G-ma$，这时表示物体对弹簧秤拉力的弹簧秤读数小于物体
 好像物体完全失去了重量一样．物体
 对支持物的压力（或对悬挂物的拉力）
 等于零的这种状态，叫做完全失重状态．
+\begin{figure}[htbp]
+	\centering
+	\includegraphics{fig/A/3-14.pdf}
+	\caption{}\label{fig_A_3-14}
+\end{figure}
+
 
     应该指出，物体处于超重或失重状态时，地球作用于物体
 的重力始终存在，大小也没有发生变化，只是物体对支持物的
@@ -1072,7 +1079,7 @@ $v=0.95c$时，$m\approx 3.1m_0$．这时，经典力学就不再适用了．当
 秒钟，测出飞船和火箭组的速度改变
 是0.91$\Ums$．已知双子星号宇宙飞
 船的质量$m_1=3400\Ukg$．求火箭组的质量$m_2$是多大．
-\begin{figure}[htp]
+\begin{figure}[htbp]
     \centering
     \includegraphics{fig/A/3-15.pdf}
     \caption{}\label{fig_A_3-15}
@@ -1115,7 +1122,7 @@ $s$，那么：
 相等、方向与$v_0$相同的恒力$F$的作用，
 它们能不能在某一时刻达到相同的速
 度？分$m_1<m_2$, $m_1=m_2$, $m_1>m_2$三种情况来讨论．
-\begin{figure}[htp]
+\begin{figure}[htbp]
     \centering
     \includegraphics{fig/A/3-16.pdf}
     \caption{}\label{fig_A_3-16}
