加入重排序

--- a/1/A/preface.tex
+++ b/1/A/preface.tex
@@ -11,6 +11,38 @@
 希望广大教师和研究中学物理教学的同志提出批评和修改建议．
 
 
+\chapter{重排序}
+
+高中物理甲种本于上世纪的 1983 年到 1985 年出版，虽该书年代久远，但内容体系安排比如今的高中教材完整且合理．
+在前人制作的基础上，针对高中物理甲种本（全三册），精校精排，修复上千处问题，终于得到了一个较为完善的版本．
+
+此版本极大的依赖于前人工作，没有他们辛勤付出和无私分享，也就没有现在的版本，于此特表感谢：
+\begin{itemize}
+	\item
+	文字部分来自于 \href{https://github.com/jamesfang8499}{jamesfang8499}
+	的工作
+	\item
+	插图部分来自于
+	\href{https://www.latexstudio.net/index/lists/barsearch/author/1077.html}{拿了橘子跑啊}
+	的工作
+\end{itemize}
+本文档使用 \LaTeX 编写而成，源码地址 \href{https://gitee.com/ylxdxx/physics-retypeset}{gitee.com/ylxdxx/physics-retypeset}．
+在制作校对的过程中，难免存在疏漏，在使用过程中发现任何问题，欢迎提出．
+愿：
+\begin{center}
+	\kaishu 
+	\vspace*{0.5cm}
+	“古今共栽树，天下齐乘凉”
+	\vspace*{0.3cm}
+\end{center}
+\begin{center}
+	\flushright
+	\begin{tblr}{c}
+		水   \\
+		\today
+	\end{tblr}
+\end{center}
+
 \chapter{引言——怎样学好物理知识}
 
 我们在初中学了两年物理，学习了一些物理概念，如质
