--- a/1/A/preface.tex
+++ b/1/A/preface.tex
@@ -50,7 +50,7 @@
 如惯性定律、能的转化和守恒定律、欧姆定律、光的反射定律
 等等；初步知道了一些物理理论，如分子论、电子论．这些概
 念、定律、理论都是物理知识，正如我们在初中学习物理中体
-会到的那样，物理知识是大们认识自然和改造自然的重要
+会到的那样，物理知识是人们认识自然和改造自然的重要
 武器．
 
 经过几千年特别是近两三百年的积累，人类的物理知识
@@ -82,13 +82,13 @@
 的实践．
 
     我们学习物理知识的过程，跟人类探索物理知识的过程
-有很多相似之处．因此，在高中迸一步学习物理的时候，必须
+有很多相似之处．因此，在高中进一步学习物理的时候，必须
 充分重视实践在学习物理知识中的重要意义，特别是要认真
 做好实验．
 
     实验能够帮助我们形成正确的物理概念，增强观察物理
-现象和分析物理问题的能力，加深对物理规律的理解，为了
-做好实验，在每次实验之前，一定要明确实验的目的，弄懂它
+现象和分析物理问题的能力，加深对物理规律的理解．
+为了做好实验，在每次实验之前，一定要明确实验的目的，弄懂它
 的原理，了解所用仪器的性能，搞清楚实验的步骤；实验中要
 认真观察现象，仔细记录必要的数据；实验后要对所得的数据
 进行分析，作出合理的结论，必要时要进一步研究那些还不够
@@ -185,7 +185,7 @@
 对液体导电也适用，对气体导电就不成立了．物理规律不能
 随意应用到它的适用范围之外去．例如，机械能在只有动能
 和势能发生相互转化时才是守恒的．飞机起飞、火车制动、大
-炮发射炮弹的时候，机械能都跟其他形式的能发生相互转化、
+炮发射炮弹的时候，机械能都跟其他形式的能发生相互转化，
 这时总的能量是守恒的，但机械能并不守恒．在这些情况下
 就不能用机械能守恒定律来分析讨论问题，否则就会得到错
 误的甚至荒谬的结果．所以，学习物理规律时，知道它的适用
