--- a/fig/A/1-15.tex
+++ b/fig/A/1-15.tex
@@ -126,8 +126,8 @@
   % \useasboundingbox(-1,-0.75)rectangle(3.7,1.4);
   \dynamometer[90]{}{1.7}\dynamometer[270]{xshift=-0.07mm}{1.7}
   \dynamometer[90]{yshift=-1.6cm}{1.7}\dynamometer[270]{xshift=2cm,yshift=-2.3cm}{1.7}
-  \draw[thick,->](0,-1.6)--++(1,0)node[right]{$F$};
-  \draw[thick,->](2,-2.3)--++(-1,0)node[left]{$F'$};
+  \draw[thick,->](0,-1.6)--++(1,0)node[right]{$F^{\prime}$};
+  \draw[thick,->](2,-2.3)--++(-1,0)node[left]{$F$};
   \node at (-2.0,-1.1){$A$};
   \node at (-2.0,0.5){$A$};
   \node at (4.0,-1.7){$B$};
