--- a/1/A/02.tex
+++ b/1/A/02.tex
@@ -3,10 +3,11 @@
 \section{机械运动}
  我们在初中学过，一个物体相对于另一个物体的位置变
 化叫做\NoteBold{机械运动}，简称运动．在自然界中没有不动的物体．房
-屋、桥梁、树术、山岭等总在原地不动，我们说它们是静止的．
+屋、桥梁、树木、山岭等总在原地不动，我们说它们是静止的．
 其实它们是随着地球一起运动的，不但地球在运动，太阳在
 银河系中也是运动的．小到原子和分子，大到宇宙中的天体，
-一切物体都在运动，机械运动是宇宙中最普遍的现象．
+一切物体都在运动．
+机械运动是宇宙中最普遍的现象．
 
 \subsection{参照物} 
 
@@ -81,7 +82,7 @@
     在什么情况下可以把物体当作质点，这要看具体情况而
 定．举例来说，当我们研究地球的公转时，由于地球的直径（约
 $1.3\times 10^4$千米）比地球和太阳之间的距离（约$1.5\times 10^8$千米）
-要小得多，因而可以忽略地球的大小和形状，把它当作质点，
+要小得多，因而可以忽略地球的大小和形状，把它当作质点．
 可是研究地球的自转时，我们却不能忽略地球的大小和形状，
 当然不能把地球当作质点了．
 
@@ -196,9 +197,8 @@ $1.3\times 10^4$千米）比地球和太阳之间的距离（约$1.5\times 10^8$
 
 这就是说，位移的数值等于末位置的坐标$x$减去初位置
 的坐标$x_0$．在图~\ref{fig_A_2-7} 中，$A$点表示初位置，$B$点表示未位置．图~\ref{fig_A_2-7a}
-中，$s=x-x_0=4-2=2$米，位移是正值，它的大小
-是2米，方向与坐标轴的正方向相同．图~\ref{fig_A_2-7b} 中，$s=x-x_0=-5-1=-6$
-米，位移是负值，它的大小是6米，方向与
+中，$s=x-x_0=4-2 \Um =2 \Um $，位移是正值，它的大小
+是2米，方向与坐标轴的正方向相同．图~\ref{fig_A_2-7b} 中，$s=x-x_0=-5-1 \Um =-6 \Um $，位移是负值，它的大小是6米，方向与
 坐标轴的正方向相反．可见，在直线运动中，用一个带有正
 负号的数值就可以把位移矢量的大小和方向都表示出来．
 
@@ -254,7 +254,7 @@ $x_0=0$．这时质点的位移就可以用末位置的坐标来表示：
 大小．
 
     速度的单位有厘米/秒，米/秒，千米/小时等．在国际单
-位制中，速度用米/秒（$\Ums$）作单位．
+位制中，速度用米/秒（$\UmsA$）作单位．
 
     速度不但有大小，而且有方向，是矢量．速度矢量的方向
 就是物体位移的方向．在匀速直线运动中，计算时通常取位
@@ -299,13 +299,14 @@ $x_0=0$．这时质点的位移就可以用末位置的坐标来表示：
     \subsection{匀速直线运动的位移图像} 
     
     任意选择一个平面直角坐标
-系、用横轴表示时间，用纵轴表示位移，画出位移和时间的关
-系图线，这种图像叫做\NoteBold{位移—时间图像}，简称为\NoteBold{位移图像}，匀速直线运动的位移$s$
+系，用横轴表示时间，用纵轴表示位移，画出位移和时间的关
+系图线，这种图像叫做\NoteBold{位移—时间图像}，简称为\NoteBold{位移图像}．
+匀速直线运动的位移$s$
 是时间$t$的正比函数$s=vt$．
 
 
 在初中数学里已经学过，正比函数的图像是一条通过原
-点的直线．图~\ref{fig_A_2-8} 中的直线~I是速度为$20 \Ums$的匀速运动
+点的直线．图~\ref{fig_A_2-8} 中的直线~I是速度为$2 \Ums$的匀速运动
 的位移图像，直线II是速度为$v=3 \Ums$的位移图像．
 \begin{figure}[htbp]
 	\centering
@@ -319,7 +320,8 @@ $x_0=0$．这时质点的位移就可以用末位置的坐标来表示：
 
     应用匀速运动的位移图像，我们可以求出物体在任意时
 间内的位移．例如从图~\ref{fig_A_2-8} 可以求出，$v=2\Ums$的匀速运动
-在2.5秒内的位移是5米，应用位移图像也可以反过来求出
+在2.5秒内的位移是5米．
+应用位移图像也可以反过来求出
 物体通过任一位移所需的时间．
 
 
@@ -374,15 +376,15 @@ $\Delta s/\Delta t$叫做直线的\NoteBold{斜
     \end{minipage}
 \end{figure}
 
-应用速度图像可以求出质点在任何时间内的位移，设有
-一个骑自行车的人以3$\Ums$的速度做匀速运动，速度图像如
+应用速度图像可以求出质点在任何时间内的位移．
+设有一个骑自行车的人以3$\Ums$的速度做匀速运动，速度图像如
 图~\ref{fig_A_2-11} 所示．现在来求他在5秒钟内的位移．为了求出位
 移，根据公式$s=vt$，必须用时间和速度相乘，也就是用横轴
 上的线段$OA=5$秒和纵轴上的线段$OB=3$$\Ums$相乘．图~\ref{fig_A_2-11} 
 中画有斜线的长方形的“面积”，表示的就是这个位移的
 大小，它的数值是$3 \Ums \times 5 \Us = 15 \Um$，也就是说，位移的数
 值等于这个长方形“面积”的数值．这里我们把“面积”一词打
-上引号，是因为这个长方形的底的单位是秒，高的单位是$\UmsA$，这个面积的单位是$\UmsA \times \UsA= \UmA $，而不是$ \UmqA $．
+上引号，是因为这个长方形的底的单位是$\UsA$，高的单位是$\UmsA$，这个面积的单位是$\UmsA \times \UsA= \UmA $，而不是$ \UmqA $．
 
 \subsection*{练习四}
 \begin{figure}[htbp]
@@ -448,7 +450,7 @@ $\Delta s/\Delta t$叫做直线的\NoteBold{斜
 如果用$\bar v$来表示平均速度，那么
 \[\bar v=\frac{s}{t}\]
 
-平均速度的数值跟在哪一段时间内计算平均速度有关，
+平均速度的数值跟在哪一段时间内计算平均速度有关．
 上面讲的那列火车，如果在第一个十分钟走了8千米，在第二
 个十分钟走了9千米，在第三个十分钟里走了11千米，它在
 三个十分钟里的平均速度就分别是48$\Ukmh$，54$\Ukmh$，66$\Ukmh$．可见，火车半小时内的平均速度虽然是
@@ -462,7 +464,7 @@ $\Delta s/\Delta t$叫做直线的\NoteBold{斜
 一位置）的速度，叫做\NoteBold{瞬时速度}．
 
 物体在某一时刻或某一位置的速度的意义是什么呢？图~\ref{fig_A_2-14} 
-表示一辆做变速运动的汽车．我们要确定汽车经过$A$点
+表示一辆做变速运动的汽车，我们要确定汽车经过$A$点
 时的瞬时速度．从$A$起取一小段位移$AA_1$，求出在这段位移上
 的平均速度，这个平均速度可以近似地表示汽车经过$A$点的
 快慢程度．从$A$起所取的位移越小，比如依次取位移$AA_2$、$AA_3$
@@ -490,7 +492,7 @@ $\Delta s/\Delta t$叫做直线的\NoteBold{斜
 用数学语言可以更为精确地表达上面所讲的意思．在图~\ref{fig_A_2-14} 
 中从$A$起取一小段位移$\Delta s$，求出这小段位移内的平均
 速度$\Delta s/\Delta t$， 当$\Delta t$\NoteBold{趋近于}零时，平均速度\NoteBold{趋近于}某一固定数
-值—一极限值，这个极限值就是汽车经过$A$点的瞬时速度．
+值——极限值，这个极限值就是汽车经过$A$点的瞬时速度．
 
     瞬时速度既有大小，又有方向，是矢量．在直线运动中，
 瞬时速度的方向就是物体经过该点时的运动方向．瞬时速度
@@ -580,9 +582,9 @@ $\Delta s/\Delta t$叫做直线的\NoteBold{斜
 的变化．
 
     加速度的单位是由时间的单位和速度的单位确定的．在
-国际单位制中，时间的单位是秒，速度的单位如果用$\Ums$、加
-速度的单位就是$\Ums$$^2$，读作米每二次方秒．速度的单位如
-果用$\Ucms$，加速度的单位就是$\Ucmsq$．
+国际单位制中，时间的单位是秒，速度的单位如果用$\UmsA$、加
+速度的单位就是$\UmsqA$，读作米每二次方秒．速度的单位如
+果用$\UcmsA$，加速度的单位就是$\UcmsqA$．
 
     加速度不但有大小，而且有方向，因此是矢量．在直线运
 动中，取开始运动的方向作为正方向时，$v_0$为正值．在这种情
@@ -697,7 +699,7 @@ $\Delta s/\Delta t$叫做直线的\NoteBold{斜
 \begin{example}
 汽车紧急刹车后加速度的大小是6.5$\Umsq$，
 如果必须在2.0秒内停下来，汽车行驶的最大允许速度是多
-少$\Ukmh$？
+少$\UkmhA$？
 \end{example}
 
 \begin{solution}
@@ -741,7 +743,8 @@ v_0&=v_t-at\\
 匀变速运动的速度和时间的关
 系，也可以用图像来表示．由于$v_t=v_0+at$是时间$t$的一次
 函数，所以匀变速运动的速度—时间图像（简称为速度图像）是
-一条直线，图~\ref{fig_A_2-15} 是初速度为零的匀变速运动的速度图像，
+一条直线．
+图~\ref{fig_A_2-15} 是初速度为零的匀变速运动的速度图像，
 图~\ref{fig_A_2-16} 是初速度不为零而加速度为正值的匀变速运动的速
 度图像，图~\ref{fig_A_2-17} 是初速度不为零而加速度为负值的匀变速
 运动的速度图像．从匀变速运动的速度图像可以求出任意时
@@ -804,7 +807,8 @@ $\Ums$．从匀变速运动的速度图像也可以求出物体达到某一
 如某时间的分割再细一些（图~\ref{fig_A_2-19b}），物体速度的跃变发生
 得更频繁，它的速度图像就更接近于汽车的真实运动的图像，
 阶梯状折线和横轴间画有斜线部分的面积数值，就更接近于
-物体的实际位移，这样不断细分下去，当时间间隔分得足够
+物体的实际位移．
+这样不断细分下去，当时间间隔分得足够
 小时，或
 者用数学语言来说，当时间间隔无限细分时
 ，间断的阶梯线段就趋近于物体的速度图线；阶梯形折线跟
@@ -958,7 +962,7 @@ s&=v_0t
 汽车最后停下来，$v_t=0$．
 
     要求出位移可以用公式 \eqref{eq-A-2.2}，其中$v_0$和$a$是已知的，$t$是
-未知的．要求出$t$可以用公式 \eqref{eq-A-2.1}，把$v_t,v_0,a$代入公式就得
+未知的．要求出$t$可以用公式 \eqref{eq-A-2.1}，把$v_t $，$ v_0 $，$ a$代入公式就得
 到$t$．
 
 从公式 \eqref{eq-A-2.1} 得到
@@ -1129,7 +1133,8 @@ $s=\frac{1}{2} v t$，
 \end{quotation}
 
     短短两段文字，不仅叙述了他所使用的仪器设备和实验
-步骤，而且可以看出伽利略的严格的科学态度，伽利略的实
+步骤，而且可以看出伽利略的严格的科学态度．
+伽利略的实
 验方法，简单易行，人人都可以做，后人多次重做了他的实验，
 都证实了他的结论的正确．
 
@@ -1159,7 +1164,8 @@ $s=\frac{1}{2} v t$，
 
 注意：这道题中的结论在学生实验中要用到．
 
-\item 做匀变速运动的物体，在各个连续相等时间$t$内的位移分别是$s_1, s_2, s_3,\ldots,s_n$．如果加速度是$a$，试证明：
+\item \label{exer_A_02-9-6}
+做匀变速运动的物体，在各个连续相等时间$t$内的位移分别是$s_1 $，$ s_2 $，$ s_3 $，$ \cdots $，$ s_n$．如果加速度是$a$，试证明：
 \[\Delta s=s_2-s_1=s_3-s_2=\cdots=s_n-s_{n-1}=at^2 \]
 
 提示：从第一个$t$秒开始的时刻计时，在该时刻$t=0$，速度为$v_0$，利用位移公式和速度公式可得：
@@ -1177,11 +1183,14 @@ s_3&=(v_0+2at)t +\frac{1}{2}at^2\\
 \section{自由落体运动}
 \subsection{自由落体运动}
 物体下落的运动是一种常见的而且重
-要的运动，挂在线上的重物，如果把线剪断，它在重力的作用下就沿着竖直方向下落．从手中释放的石块，在重力作用下也沿着竖直方向下落，可见物体下落的运动是直线运动．
+要的运动．
+挂在线上的重物，如果把线剪断，它在重力的作用下就沿着竖直方向下落．从手中释放的石块，在重力作用下也沿着竖直方向下落．
+可见物体下落的运动是直线运动．
 
 不同物体的下落运动，情况是否相同呢？
 
-在同一高度同时释放一个金属片和一个纸片，可以看到金属片比纸片下落得快，从这里似乎可以得到结论：物体下落的快慢是由它们的重量决定的，物体越重，下落得越快．十六世纪以前的学者的看法就是这样的．其实这个结论是错误的，它没有考虑空气阻力的影响．纸片比较轻，空气阻力对它的影响比较大，所以才下落得慢．现在我们改变一下实验的作法：把纸片团成一个小纸团，再让它和金属片同时下落．这时纸团受到的空气阻力大为减小，我们可以看到纸团和金属片几乎是同时落地的．
+在同一高度同时释放一个金属片和一个纸片，可以看到金属片比纸片下落得快．
+从这里似乎可以得到结论：物体下落的快慢是由它们的重量决定的，物体越重，下落得越快．十六世纪以前的学者的看法就是这样的．其实这个结论是错误的，它没有考虑空气阻力的影响．纸片比较轻，空气阻力对它的影响比较大，所以才下落得慢．现在我们改变一下实验的作法：把纸片团成一个小纸团，再让它和金属片同时下落．这时纸团受到的空气阻力大为减小，我们可以看到纸团和金属片几乎是同时落地的．
 
 
 拿一个长约1.5米，一端封闭，另一端有开关的玻璃筒（图~\ref{fig_A_2-20}）．把形状和重量都不同的一些物体，如金属片、小
@@ -1189,7 +1198,7 @@ s_3&=(v_0+2at)t +\frac{1}{2}at^2\\
 如果把玻璃筒里的空气抽出去，把玻璃筒很快倒立过来以后，这些物体下落的快慢就相同了．
 \begin{figure}[htbp]
 	\centering
-	\includegraphics{fig/A/2-20.pdf}
+	\includegraphics[angle=90]{fig/A/2-20.pdf}
 	\caption{在没有空气的空间里，物体下落的快慢相同}\label{fig_A_2-20}
 \end{figure}
 
@@ -1201,19 +1210,21 @@ s_3&=(v_0+2at)t +\frac{1}{2}at^2\\
 
 \subsection{自由落体加速度}
 图~\ref{fig_A_2-21} 是自由落体（小球）的闪光照
-片，它是每隔1/30秒的时间拍摄的，由这张照片可以测出小球在各个连续相等时间里的位移．小球最初几个位置比较密集，测量起来误差较大，我们从某个稍大些的位置间隔开始测量．
-表 \ref{tab-A-2.1} 第一列是这些间隔的标号，第二列是这些间隔的长度，即小球在各个1/30秒内的位移，第三列是后一间隔的长度减去前一间隔的长度所得的结果．这些值在误差范围内可以认为是相等的，从练习九第6题知道，这表示小球的下落是匀变速运动．可见，\NoteUnderWave{自由落体运动是初速度为零的匀变速运动}．
+片，它是每隔1/30秒的时间拍摄的．
+由这张照片可以测出小球在各个连续相等时间里的位移．小球最初几个位置比较密集，测量起来误差较大，我们从某个稍大些的位置间隔开始测量．
+表 \ref{tab-A-2.1} 第一列是这些间隔的标号，第二列是这些间隔的长度，即小球在各个1/30秒内的位移，第三列是后一间隔的长度减去前一间隔的长度所得的结果．这些值在误差范围内可以认为是相等的．
+从练习九第~\ref{exer_A_02-9-6} 题知道，这表示小球的下落是匀变速运动．可见，\NoteUnderWave{自由落体运动是初速度为零的匀变速运动}．
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[height=0.93\linewidth, angle=90]{fig/A/2-21.png}
+    \includegraphics[height=11cm, angle=90]{fig/A/2-21.png}
     \caption{自由落体的闪光照片}\label{fig_A_2-21}
 \end{figure}
 
 
 \begin{table}
 	\centering
-	\caption{其中$s$是间隔长度（厘米）；$\Delta s$是后一间隔长度减去前一间隔长度（厘米）．}\label{tab-A-2.1}
+	\caption{其中$s$是间隔长度（$\UcmA$）；$\Delta s$是后一间隔长度减去前一间隔长度（$\UcmA$）．}\label{tab-A-2.1}
 	\begin{tblr}{ccc}
 		\toprule
 		间隔编号&
@@ -1268,10 +1279,12 @@ s&=\frac{1}{2}gt^2
 
 \section*{阅读材料：伽利略对自由落体的研究}
 古代的学者们认为，物体下落的快慢是由它们的重量决定的，物体越重，下落得越快．生活在公元前四世纪的希腊哲学家亚里士多德最早阐述了这种看法．亚里士多德的论断影响深远，在其后两千多年的时间里，人们一直信奉他的学说．但是这种从表面上的观察得出的结论实际上是错误的，伟大的物理学家伽利略用简单明了的科学推理，巧妙地揭露了亚里士多德的理论内部包含的矛盾．他在1638年写的《两种新科学的对话》一书中指出：根据亚里士多德的论断，一块大石头的下落速度要比一块小石头的下落速度大．假定大石头的下落速度为八．小石头的下落速度为四，当我们把两块石头拴在一起时，下落快的会被下落慢的拖着而减慢，下落慢的会被下
-落快的拖着而加快，结果整个系统的下落速度应该小于八，但是两块石头拴在一起，总的重量比大石头的重量还要大，因此重物体比轻物体的下落速度要小．这样，就从重物体比轻物体下落得快的假设，推出了重物体比轻物体下落得慢的结论．亚里士多德的理论陷入了自相矛盾的境地．伽利略由此推断重物体不会比轻物体下落得快．
+落快的拖着而加快，结果整个系统的下落速度应该小于八．
+但是两块石头拴在一起，总的重量比大石头的重量还要大，因此重物体比轻物体的下落速度要小．这样，就从重物体比轻物体下落得快的假设，推出了重物体比轻物体下落得慢的结论．亚里士多德的理论陷入了自相矛盾的境地．伽利略由此推断重物体不会比轻物体下落得快．
 
 伽利略认为自由落体运动是一种匀变速运动，但当时他无法用实验直接证实自己的论断，只好求助于间接证明．伽利略先证明了从斜面上滚下的小球是做匀变速运动，然后把结论外推到斜面倾角增大到90$^\circ$的情况，小球将自由下落，成为自由落体．伽利略认为，这时小球仍然会保持匀变速运动
-的性质．这种从斜面运动到落体运动的外推，是很巧妙的．不过，用外推法得出的结论，并不一定都是正确的，现代物理研究中也常用外推法，但用这种方法得到的结论都要经过实验的证实才能得到承认．
+的性质．这种从斜面运动到落体运动的外推，是很巧妙的．不过，用外推法得出的结论，并不一定都是正确的．
+现代物理研究中也常用外推法，但用这种方法得到的结论都要经过实验的证实才能得到承认．
 
 今天，距离伽利略的时代已有三百多年了，伽利略无法直接用实验来证实的结论，我们已经可以直接用实验来证实了．
 
@@ -1298,8 +1311,8 @@ s&=v_0 t-\frac{1}{2}gt^2
 注意：上述公式中的$t$是从抛出时刻开始计时的，$s$是运动物体对抛出点的位移．
 
 现在我们应用上述公式讨论几个具体问题．
-\begin{enumerate}[(1)]
-    \item  物体上升的时间
+
+（1）物体上升的时间
     
     设物体经过时间$t$，上升到最高点，在这一时刻，物体是静止的，由此可得
     \[v_0-gt_1=0 \]
@@ -1307,13 +1320,13 @@ s&=v_0 t-\frac{1}{2}gt^2
     所以物体上升的时间
     \[t_1=\frac{v_0}{g} \]
     
-    \item 上升的最大高度
+（2）上升的最大高度
     
     物体上升的最大高度，就是$t=t_1=v_0/g$时的高度，把这个
     式子代入位移公式就可以得出物体上升的最大高度$H$：
     \[H=v_0t_1-\frac{1}{2}gt_1^2=\frac{v^2_0}{2g} \]
     
-    \item 物体下落的时间
+（3）物体下落的时间
     
     物体落回到初位置时位移为零，即$s=0$．代入位移公式
     得
@@ -1329,7 +1342,7 @@ s&=v_0 t-\frac{1}{2}gt^2
     比较$t_1$和$t_2$可知，$t_1=t_2$．即物体上升到最大高度所用
     的时间跟物体从这个高度落回原地所用的时间相等．
     
-    \item 落地速度
+（4）落地速度
     
     已知落地时间为$t=2v_0/g$，
     由公式$v_t=v_0-gt$可以求出
@@ -1338,7 +1351,7 @@ s&=v_0 t-\frac{1}{2}gt^2
     
     可见，物体落回原地的速度跟抛出的初速度大小相等，方
     向相反．
-\end{enumerate}
+
 
 实际上，在竖直上抛运动中，不但上升时间等于下落时间，而且在上升过程中通过某一位置的速度和下落过程中通
 过这个位置的速度总是大小相等、方向相反的．有兴趣的同学，对于后一论断可以自己试做证明．
@@ -1416,11 +1429,11 @@ s&=v_0 t-\frac{1}{2}gt^2\\
     \item 一个竖直上抛的物体，经过4.0秒落回原地，经过1.0秒，2.0秒，3.0秒，物体的速度分别是多大？物体的位移分别是多大？通过的路程分别是多长？
     \item 气球以10$\Ums$的速度匀速竖直上升，从气球上掉下一个物体，经17秒到达地面．求物体刚脱离气球时气球的高度．
     \item 初速度为零的匀变速运动，在第1秒内、第2秒内、第
-    3秒内……的位移分别是$s_I,s_{II},s_{III},\ldots$．试证明：$s_I,s_{II},s_{III},\ldots$之比等于从1开始的连续奇数之比，即：
+    3秒内……的位移分别是$s_I $，$ s_{II} $，$ s_{III} $，$ \cdots$．试证明：$s_I $，$ s_{II} $，$ s_{III} $，$ \cdots$之比等于从1开始的连续奇数之比，即：
 $$s_I:s_{II}:s_{III}\cdots=1:3:5\cdots$$
 
 提示：设物体在1秒内、2秒内、3秒内……发生的位移是
-$s_1 $，$ s_2 $，$ s_3 $，$ \cdots$，那么
+$s_1 $，$ s_2 $，$ s_3 $，$ \cdots$那么
 $$s_I=s_1,   \quad  s_{II}=s_2-s_1,   \quad s_{III}=s_3-s_2,  \quad \cdots$$
     \item 从楼顶上落下一个铅球，通过1米高的窗子用了0.1秒的时间．楼顶比窗台高多少米？
 \end{enumerate}
