--- a/1/A/03.tex
+++ b/1/A/03.tex
@@ -13,7 +13,8 @@
 在初中我们已经学过了牛顿第一定律，这一节我们先回顾一下历史，然后对这个定律本身作一些讨论．
 
 \subsection{历史的回顾} 
-远在两千多年以前，人们已经提出了运动和力的关系问题，可是直到伽利略和牛顿（$1642 \sim 1727$）时代，才对这个问题给出了正确的答案．
+远在两千多年以前，人们已经提出了运动和力的关系问题．
+可是直到伽利略和牛顿（$1642 \sim 1727$）时代，才对这个问题给出了正确的答案．
 
 在十七世纪以前，人们普遍认为力是维持物体运动的原因．用力推车，车子才前进，停止用力，车子就要停下来．
 古希腊的哲学家亚里士多德（公元前$384 \sim 322$）根据这类经验事实得出结论说：必须有力作用在物体上，物体才能运动
@@ -21,11 +22,13 @@
 
 在亚里士多德以后的两千年内，动力学一直没有多大进展．
 直到十七世纪，意大利的著名物理学家伽利略才根据实验揭示了现象的本质，指出了亚里士多德的观点的错误．
-伽利略发现运动物体所以会停下来，是因为受到摩擦阻力的缘故．他断言：一旦物体具有某一速度，只要没有加速或减速的原因，这个速度将保持不变，而这种情况只有在摩擦力极小的水平面上才能近似达到．
+伽利略发现运动物体所以会停下来，是因为受到摩擦阻力的缘故．他断言：一旦物体具有某一速度，只要没有加速或减速的原因，这个速度将保持不变．
+而这种情况只有在摩擦力极小的水平面上才能近似达到．
 根据这种观点看来，力不是维持物体的运动即维持物体的速度的原因，而是改变物体运动状态即改变物体速度的原因．
 
 伽利略是怎样得到这个结论的呢？伽利略并没有脱离日常经验，而是对经验进行了分析．他研究了物体在斜面上的运动，发现物体沿斜面向下运动，有加速的原因出现，速度不
-断增加，沿斜面向上运动，有减速的原因出现，速度不断减小．他根据这一事实进行推论，指出在没有倾斜的光滑水平面上，物体的运动应当是既没有加速也没有减速，速度应当是不变的．当然伽利略知道，由于物体受到摩擦力的阻碍，这种水平运动的速度实际上并不是不变的，摩擦越小，物体以接近于恒定速度运动的时间就越长．在没有摩擦的理想情况下，物体将以恒定的速度持续运动下去．
+断增加，沿斜面向上运动，有减速的原因出现，速度不断减小．他根据这一事实进行推论，指出在没有倾斜的光滑水平面上，物体的运动应当是既没有加速也没有减速，速度应当是不变的．当然伽利略知道，由于物体受到摩擦力的阻碍，这种水平运动的速度实际上并不是不变的．
+摩擦越小，物体以接近于恒定速度运动的时间就越长．在没有摩擦的理想情况下，物体将以恒定的速度持续运动下去．
 
 我们可以用现代的实验设备来近似地验证上述结论．把
 物体放在一个水平导轨上，并设法使物体和导轨之间形成气层，物体沿这种气垫导轨运动时摩擦很小．推动一下物体，可以看到物体沿气垫导轨的运动很接近匀速直线运动．
@@ -88,7 +91,8 @@
 
 \section*{阅读材料：爱因斯坦谈运动的问题}
 有一个基本问题，几千年来都因为它太复杂而含糊不清，这就是运动的问题．……设想有一个静止的物体，没有任何运动，要改变这样一个物体的位置，必须使它受力，如推它，提它，或由其他的物体如马、蒸汽机作用于它．
-我们的直觉认为运动是与推、提、拉等动作相连的，多次的经验使我们进一步深信，要使一个物体运动得愈快，必须用更大的力推它．
+我们的直觉认为运动是与推、提、拉等动作相连的．
+多次的经验使我们进一步深信，要使一个物体运动得愈快，必须用更大的力推它．
 结论好像是很自然的：对一个物体的作用愈强，它的速度就愈大．一辆四匹马驾的车比一辆两匹马驾的车运动得快一些．这样，直觉告诉我们，速率主要是跟作用有关．
 
 ……
@@ -108,7 +112,7 @@
 这个理想实验指出了真正建立运动的力学基础的线索．
 
 比较一下对待这个问题的两种方法，我们可以说，根据直觉的观念是这样的：作用愈大，速度便愈大．因此速度本身表明着有没有外力作用于物体之上．
-伽利略所发现的新线索是：一个物体，假如既没有人去推它、拉它，也没有人用旁的方法
+伽利略所发现的新线索是：一个物体，假如既没有人去推它、拉它，也没有人用别的方法
 去作用于它，或者简单些说，假如没有外力作用于它，此物体将均匀地运动，即沿一直线永远以同样速度运动下去．因此，速度本身并不表明有没有外力作用于物体上．伽利略这个正确的结论隔了一代以后由牛顿把它写成惯性定律．
 
 ……
@@ -157,9 +161,11 @@
 \section{加速度和力的关系}\label{sec-A-3-relationship-between-acceleration-and-force}
 质量一定时加速度和力的关系是怎样的呢？现在随同老师一起做实验来探讨这个问题．
 
-实验装置如图~\ref{fig_A_3-3} 所示，研究对象是图中所示的小车．小车放在光滑的平面上，前端拴着细绳，细绳跨过定滑轮，下面吊着一个砂桶，桶内装砂．
+实验装置如图~\ref{fig_A_3-3} 所示．
+研究对象是图中所示的小车．小车放在光滑的平面上，前端拴着细绳，细绳跨过定滑轮，下面吊着一个砂桶，桶内装砂．
 当砂和砂桶的总质量远小于小车的总质量时，小车所受的拉力可以认为等于砂和砂桶的总
-重量．因此，用天平称出砂和砂桶的总质量，算出它们的总重量，就得到小车所受的拉力．小车的后面固定一条穿过打点计时器的纸带，随着小车的运动，打点计时器在纸带上打下一列小点，把小车的运动情况记录下来．
+重量．因此，用天平称出砂和砂桶的总质量，算出它们的总重量，就得到小车所受的拉力．小车的后面固定一条穿过打点计时器的纸带．
+随着小车的运动，打点计时器在纸带上打下一列小点，把小车的运动情况记录下来．
 
 \begin{figure}[htbp]
     \centering
@@ -167,13 +173,14 @@
     \caption{研究牛顿第二定律的实验装置}\label{fig_A_3-3}
 \end{figure}
 
-每次实验中小车所受的拉力都是恒定的，小车在恒力的作用下，运动情况是怎样的呢？取下纸带，用实验七中所讲的方法来判断小车是否做匀变速运动．
+每次实验中小车所受的拉力都是恒定的．
+小车在恒力的作用下，运动情况是怎样的呢？取下纸带，用实验\ref{sec-A-app-1-7-study of-uniformly-variable-linear-motion}中所讲的方法来判断小车是否做匀变速运动．
 实验结果表明：在恒力的作用下，物体做匀变速运动；也就是说，作用力恒定时，加速度是恒定的．
 课后同学们可以根据自己实验的记录纸带，来
 判断小车是否做匀变速运动．
 
-在这个实验中还可以进一步求出加速度的大小．加速度的大小可以用实验七中所讲的利用速度图像来求，也可以用下述方法来求．
-在纸带上的不同部位分别选取几段距离，用实验七的方法分别求出各段的初速度$v_0$和末速度$v_t$，利用公式$a=(v_t-v_0)/t$分别求出各段的加速度，然后算出平均值作
+在这个实验中还可以进一步求出加速度的大小．加速度的大小可以用实验\ref{sec-A-app-1-7-study of-uniformly-variable-linear-motion}中所讲的利用速度图像来求，也可以用下述方法来求．
+在纸带上的不同部位分别选取几段距离，用实验\ref{sec-A-app-1-7-study of-uniformly-variable-linear-motion}的方法分别求出各段的初速度$v_0$和末速度$v_t$，利用公式$a=(v_t-v_0)/t$分别求出各段的加速度，然后算出平均值作
 为小车在整个运动过程中的加速度．课后同学们可以根据自己实验的记录纸带算出小车的加速度．
 
 现在来研究加速度和力的关系．保持小车的质量，改变砂桶里的砂量，再做几次实验．在课后根据记录纸带把各次实验中测得的力和加速度的数据列表记录下来．
@@ -229,7 +236,8 @@
 或者
 \[a\propto F\]
 
-对于一个确定的物体来说，比如我们从实验确定10牛的力能产生4$\Umsq$的加速度，那么，根据加速度和力成正比，我们就可以知道任何大小的力对这个物体能产生多大的加速度，如15牛的力产生6$\Umsq$的加速度，20牛的力产生8$\Umsq$的加速度，30牛的力产生12$\Umsq$的加速度等等．
+对于一个确定的物体来说，比如我们从实验确定10牛的力能产生4$\Umsq$的加速度，那么，根据加速度和力成正比，我们就可以知道任何大小的力对这个物体能产生多大的加速度．
+如15牛的力产生6$\Umsq$的加速度，20牛的力产生8$\Umsq$的加速度，30牛的力产生12$\Umsq$的加速度等等．
 
 \subsection*{练习二}
 \begin{enumerate}
@@ -357,7 +365,8 @@
 牛顿第二定律的公式简化为
 \[F=ma\]
 
-等式$F=kma$中的$k$并不是在任何情况下都等于1，例如$m$的单位用千克，$a$的单位用$\UmsqA$，而力的单位用千克力，$k$就不等于1．
+等式$F=kma$中的$k$并不是在任何情况下都等于1．
+例如$m$的单位用千克，$a$的单位用$\UmsqA$，而力的单位用千克力，$k$就不等于1．
 这一点我们是应该注意的．
 
 
@@ -387,7 +396,8 @@
 
 \subsection*{练习四}
 \begin{enumerate}
-    \item 从牛顿第二定律知道，无论怎样小的力都可以使物体产生加速度，可是我们用力提一个很重的物体时，却提不动它．这跟牛顿第二定律有无矛盾，为什么？
+    \item 从牛顿第二定律知道，无论怎样小的力都可以使物体产生加速度．
+    可是我们用力提一个很重的物体时，却提不动它．这跟牛顿第二定律有无矛盾，为什么？
 \item 要把一个箱子在地板上从这一端推到另一端，我们在全部时间内都必须用力推它，停止用力，箱子就会停下来．马必须用力拉车，车子才前进，停止用力，车子就会停下来．亚里士多德怎样解释上述现象？根据牛顿运动定律应该怎样解释？
 \item 一个物体受到一个逐渐减小的力的作用，力的方向跟速度的方向相同，物体的速度怎样改变？
 \item \begin{enumerate}
@@ -432,7 +442,8 @@
 \[G=50 \Ukg \times 9.8\Umsq=49 \UN \]
 
 上述质量和重量的关系式$G=mg$，我们在初中已经见过，
-那时我们讲的是$g=9.8 \UNkg $，因为$1\UN=1\Ukg\cdot \UmsqA$，
+那时我们讲的是$g=9.8 \UNkg $．
+因为$1\UN=1\Ukg\cdot \UmsqA$，
 所以不难证明：$9.8 \UNkg=9.8\Umsq$．
 
 
@@ -577,8 +588,8 @@ v_t&=at=2.0\Umsq \times 5.0\Us=10\Ums
 \item 在厘米$\cdot$克$\cdot$秒制中，力的单位达因是这样定义的：
 使质量是1克的物体产生1$\Ucmsq$的加速度的力，叫做1
 \NoteBold{达因}．试证明: $1\UN=10^5\Udyn$．
-\item 有两个力，一个是100达因，一个是20牛，哪个力
-大？大的是小的的多少倍？
+\item 有两个力，一个是100达因，一个是20牛．
+哪个力大？大的是小的的多少倍？
 \item 一个原来静止的物体，质量是600克，受到0.2牛的
 力的作用，求物体在3.0秒末的速度．先用国际单位制计算，
 再用厘米$\cdot$克$\cdot$秒制计算．
@@ -611,7 +622,7 @@ v_t&=at=2.0\Umsq \times 5.0\Us=10\Ums
 这个题目就是根据已知的受力情况来求物体的运动情
 况．物体受到四个力的作用（图~\ref{fig_A_3-8}）：水平拉力$F$，滑动摩擦
 力$f$，物体的重量$G$，平面的支持力$N$．物体在竖直方向没有
-加速度，重力$a$和支持力$N$大小相等，方向相反，彼此平衡．合
+加速度，重力$G$和支持力$N$大小相等，方向相反，彼此平衡．合
 外力就是水平方向的外力$F$和$f$的合力．这里顺便提一下：像
 本题这样，物体在水平面上运动，而且水平方向的滑动摩擦
 力已经给出，不需要根据竖直方向的压力来求，我们就可以
@@ -631,7 +642,7 @@ s&=\frac{1}{2}at^2=\frac{1}{2}\times 1.1\times (4.0)^2 \Um=8.8\Um
 \end{split} \]
 \end{solution}
 
-    算出的$a,v_t,s$都是正值，表示它们的方向都是水平向左
+    算出的$a $，$ v_t $，$ s$都是正值，表示它们的方向都是水平向左
 的，与$F$的方向相同，即物体水平向左做初速度为零的匀变速
 运动．
 
@@ -677,7 +688,8 @@ s&=\frac{1}{2}at^2=\frac{1}{2}gt^2(\sin\theta-\mu \cos\theta)\\
 不讨论物体为什么会做这种或那种运动．学过动力学以后，如
 果已知物体的受力情况，我们就可以确定物体的运动情况．这
 里还是限于直线运动，下一章就要扩展到曲线运动．牛顿运
-动定律同样适用于曲线运动，例如指挥宇宙飞船飞行的科学
+动定律同样适用于曲线运动．
+例如指挥宇宙飞船飞行的科学
 工作者，他们知道飞船的受力情况，也知道飞船的初速度和初
 位置，因而他们能够确定飞船在任意时刻的位置和速度．他们
 解决问题的思路跟我们这里讲的是一样的，只是计算相当复
@@ -792,7 +804,7 @@ T&=m\sqrt{a^2+g^2}\\
 
     在动力学问题中，如果知道物体的受力情况和加速度，也
 可以测出物体的质量．这就是说，质量可以用动力学的方法
-来测定．本章习题中的第10题，就是用动力学方法测定质量
+来测定．本章习题中的第 \ref{exe_A_03-10} 题，就是用动力学方法测定质量
 的一个有趣的题目，希望同学们好好研究一下那个题目．
 
     从上面两节的例题可以看出，应用牛顿第二定律和运动
@@ -882,7 +894,8 @@ T&=m\sqrt{a^2+g^2}\\
 \[ T=G+ma\]
 
     弹簧秤的读数指的是物体对弹簧的拉力$T'$（图中未画
-出），根据牛顿第三定律知道，$T$和$T'$大小相等，方向相反．
+出）．
+根据牛顿第三定律知道，$T$和$T'$大小相等，方向相反．
 所以这时弹簧秤显示出的读数$T'$的大小是$G+ma$，即物体对
 弹簧秤的拉力大于物体的重量．跟这类似，如果把物体放在
 升降机里的体重计上，当升降机带着物体和体重计一起加速
@@ -913,7 +926,7 @@ $G-ma$，这时表示物体对弹簧秤拉力的弹簧秤读数小于物体
 加速下降时，体重计的读数也为零，就
 好像物体完全失去了重量一样．物体
 对支持物的压力（或对悬挂物的拉力）
-等于零的这种状态，叫做完全失重状态．
+等于零的这种状态，叫做\NoteBold{完全失重}状态．
 \begin{figure}[htbp]
 	\centering
 	\includegraphics{fig/A/3-14.pdf}
@@ -949,12 +962,15 @@ $G-ma$，这时表示物体对弹簧秤拉力的弹簧秤读数小于物体
 
 \section{牛顿运动定律的适用范围}
     自从十七世纪以来，以牛顿定律为基础的经典力学不断
-发展，取得了巨大的成就．从研究最简单的质点做直线运动
+发展，取得了巨大的成就．
+从研究最简单的质点做直线运动
 的力学，到研究由若干质点组成的所谓质点系做各种复杂运
 动的力学，从研究不变形的物体即所谓刚体的力学，到研究可
 变形的连续介质的力学，如流体力学和弹性力学，都属于经典
-力学的范围．经典力学在科学研究和生产技术中有广泛的应
-用．经典力学和天文学相结合，建立了天体力学，经典力学
+力学的范围．
+经典力学在科学研究和生产技术中有广泛的应
+用．经典力学和天文学相结合，建立了天体力学．
+经典力学
 和工程实际相结合，建立了各种应用力学，如水力学、材料力
 学、结构力学等等．从行星的运动到地面上各种物体的运动；
 从大气的流动到地壳的变动；从设计各种机械到拦河筑坝、修
@@ -964,8 +980,8 @@ $G-ma$，这时表示物体对弹簧秤拉力的弹簧秤读数小于物体
 这样广阔领域内用来解决实际问题时得到的结果与实际情况
 相符合，证明了牛顿定律的正确性．
 
-    但是，牛顿定律和一切物理定律一样，只具有相对的真理
-性，这就是说，牛顿定律也有它的适用范围．
+    但是，牛顿定律和一切物理定律一样，只具有相对的真理性．
+这就是说，牛顿定律也有它的适用范围．
 
     随着物理学的发展，特别是十九世纪以来电磁理论的发
 展，不断发现新的事实，如高速运动的电子的质量随着速度的
@@ -1034,10 +1050,11 @@ $v=0.95c$时，$m\approx 3.1m_0$．这时，经典力学就不再适用了．当
 \begin{enumerate}
     \item 一个小金属车可以和另外两个相同的小木车在天平
 上平衡．用一个力作用在小金属车上，得到2$\Umsq$的加速
-度，如果用相同的力作用在一个静止的小木车上，经过2秒，
+度．
+如果用相同的力作用在一个静止的小木车上，经过2秒，
 小木车的速度是多大？
 
-\item  一个质量是$m$克的物体沿着光滑的斜面下滑（不
+\item  一个质量是$m$千克的物体沿着光滑的斜面下滑（不
 计滑动摩擦），斜面的倾角是$\theta$．试证明这个物体下滑的加速
 度$a=g\sin\theta$．
 \item  一个质量是10克的物体沿着光滑的斜面从静止开
@@ -1049,8 +1066,8 @@ $v=0.95c$时，$m\approx 3.1m_0$．这时，经典力学就不再适用了．当
 滑到斜面末端时的速度$v$只跟开始滑下时竖直高度$h$、重力
 加速度$g$有关，跟物休的质量$m$、斜面的倾角$\theta$无关．
 \item  一个放在水平面上的物体，质量是0.50千克，在水
-平方向受到6.0牛的拉力，得到10$\Umsq$的加速度，求这个
-物体和平面间的滑动摩擦系数．
+平方向受到6.0牛的拉力，得到10$\Umsq$的加速度．
+求这个物体和平面间的滑动摩擦系数．
 \item   质量是2.75吨的载重卡车，在2900牛的牵引力作
 用下开上一个山坡，沿山坡每前进1米升高0.05米．卡车由
 静止开始前进100米时速度达到36$\Ukmh$．求卡车在前
@@ -1071,7 +1088,8 @@ $v=0.95c$时，$m\approx 3.1m_0$．这时，经典力学就不再适用了．当
 与水平方向成30$^{\circ}$角的斜向上方的拉力作用，物体产生沿水
 平方向的加速度是2$\Umsq$．物体跟平面的滑动摩擦系数是
 0.1．求拉力是多大？
-\item  1966年曾在地球的上空完成了以牛顿第二定律为
+\item \label{exe_A_03-10} 
+1966年曾在地球的上空完成了以牛顿第二定律为
 基础的测定质量的实验．实验时，用双子星号宇宙飞船$m_1$去
 接触正在机道上运行的火箭组$m_2$，接触以后，开动飞船尾部
 的推进器，使飞船和大箭组共同加速（图~\ref{fig_A_3-15}）．推进器的平均
