--- a/1/A/preface.tex
+++ b/1/A/preface.tex
@@ -13,10 +13,10 @@
 
 \chapter{重排序}
 
-高中物理甲种本于上世纪的 1983 年到 1985 年出版，虽该书年代久远，但内容体系安排比如今的高中教材完整且合理．
-在前人制作的基础上，针对高中物理甲种本（全三册），精校精排，修复上千处问题，终于得到了一个较为完善的版本．
+高中物理甲种本于上世纪的 1983 年到 1985 年出版，该书虽年代久远，但其内容体系安排比如今高中物理教材完整且合理．
+在前人制作的基础上，针对高中物理甲种本（全三册），精校精排，修复数千处问题，终于得到了一个较为完善的版本．
 
-此版本极大的依赖于前人工作，没有他们辛勤付出和无私分享，也就没有现在的版本，于此特表感谢：
+此版本极大地依赖于前人工作，没有他们的辛勤付出和无私分享，也就没有现在的版本，于此特表感谢：
 \begin{itemize}
 	\item
 	文字部分来自于 \href{https://github.com/jamesfang8499}{jamesfang8499}
